--- a/app/views/orders/_order_item_fields.html.haml
+++ b/app/views/orders/_order_item_fields.html.haml
@@ -1,7 +1,7 @@
 .nested-fields
   .columns.columns--small
     .column.column--sm-3
-      = f.input :item_name, label: "Nome do produto"
+      = f.input :product_reference, label: "Referência do produto"
     .column.column--sm-3{style: "margin: 0 7px;"}
       = f.input :item_option, label: "Opção"
     .column.column--sm-3
