--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -65,6 +65,7 @@
       .slide.animated.fadeIn#7
         = f.input :hidden, as: :hidden
         = f.input :quantity, label: "Quantidade disponível em estoque:"
+        = f.input :location, label: "Localização:"
 
         %button.button.button--full-width.button--green.change-slide{type: "submit"} Concluir
         %br
