--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -11,7 +11,7 @@
 
   = f.input :order_identification, label: "ID"
   = f.input :date, label: "Data"
-  = f.input :status, label: "Status", as: :select, collection: ["Pendente pagamento", "Pago", "Montagem", "Expedição", "Enviado", "Produtos em Falta"]
+  = f.input :status, label: "Status", as: :select, collection: ["Pendente pagamento", "Pago", "Montagem", "Expedição", "Enviado", "Pendente revisão"]
 
   %h3 Dados do cliente
 
