added reference input in products forms

--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -66,6 +66,7 @@
         = f.input :hidden, as: :hidden
         = f.input :quantity, label: "Quantidade disponível em estoque:"
         = f.input :location, label: "Localização:"
+        = f.input :reference, label: "Referência:"
 
         %button.button.button--full-width.button--green.change-slide{type: "submit"} Concluir
         %br
