--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -23,5 +23,6 @@
   = f.input :hidden, as: :hidden
   = f.input :quantity, label: "Quantidade disponível em estoque:"
   = f.input :location, label: "Localização:"
+  = f.input :reference, label: "Referência:"
 
   %button.button.button--green.button--full-width{type: "submit"} Salvar
