fixed error in users show

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -119,7 +119,7 @@
               menu do aquisition
             - if current_user.role == "support"
               menu do support
-            - else
+            -# - else
               unauthorized
 
           %img.pattern{src: "#{asset_path('group_11.svg')}"}
