--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -46,3 +46,24 @@
     img { width: 15px; height: 15px }
   }
 }
+
+.starter_pack_card {
+  border-radius: 10px;
+  width: 200px;
+  border: 1px solid grey;
+  margin: 0 15px;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+
+  &--active {
+    border: 3px solid green;
+  }
+
+  &__content {
+    padding: 10px;
+    text-align: left;
+  }
+}
