--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -67,3 +67,20 @@
     text-align: left;
   }
 }
+
+.payment_method {
+  margin: 15px;
+  min-width: 100px;
+  max-width: 100%;
+  border: 1px solid black;
+  border-radius: 10px;
+  text-align: center;
+
+  img {
+    width: auto;
+  }
+
+  &__content {
+    padding: 20px;
+  }
+}
