--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,7 +9,7 @@
     - if @user == current_user
       .columns
         .column.column--2
-          = link_to edit_user_path(@user) do
+          = link_to edit_user_path(@user), "data-turbolinks" => "false" do
             %button.button.button--blue Editar informações do perfil
         .column.column--2
           = link_to edit_user_registration_path do
