--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -10,6 +10,7 @@
             %th Nome
             %th Graduação
             %th Permissão
+            %th Ativar
             %th
             %th
             %th
@@ -23,6 +24,16 @@
                 %td= user.name
                 %td= user.graduation.capitalize if user.graduation.present?
                 %td= translate_role(user.role)
+                - if user.activated?
+                  %td
+                    = simple_form_for user do |f|
+                      = f.input :activated, input_html: { value: "false" }, as: :hidden
+                      = f.submit "Inativar", confirm: "Tem certeza que deseja inativar este usuário?", class: "button button--red"
+                - else
+                  %td
+                    = simple_form_for user do |f|
+                      = f.input :activated, input_html: { value: "true" }, as: :hidden
+                      = f.submit "Ativar", confirm: "Tem certeza que deseja inativar este usuário?", class: "button button--green"
                 %td
                   = link_to user do
                     %img.destroy{src: "https://icongr.am/clarity/eye.svg?color=13B3F2", style: "max-width: 20px"}
